2004-08-03 Eric Boix <Eric.Boix@creatis.insa-lyon.fr>
  * gdcmPython/testSuite.py: all the test suite in python is now moved
    to it's C++ version (see gdcmData/TestAllEntryVerifyReference.txt)
  * Test/CMakeLists.txt adapted to renaming of files in gdcmData
  * gdcm/TODO and src/gdcmDictSet.h cleaned up frow the "TODO Swig" oldies

2004-08-02 Eric Boix <Eric.Boix@creatis.insa-lyon.fr>
  * gdcmPython/CMakeLists.txt: SWIG_FLAGS doesn't declare includeall
    to avoid inclusion recursion until STL is reached.
  * src/gdcmDocument.[h|cxx]: exceptions substituted to errno C-style
    mecanism. errno.h is not included in gdcm anymore.
  * src/gdcmException.h: introduced new gdcmFormatUnexpected class
    (gdcmFormatError now inherits from gdcmFormatUnexpected).
  * TODO updated
  * gdcmPython/testSuite.py checks on CR-MONO1-10-chest.dcm moved to
    gdcmData/TestAllEntryVerifyReference.txt
  * Test/TestAllEntryVerify.cxx is now effective (used allways return true)
  * src/gdcmDocument.[cxx|h]: constructors no longer use the bool
    exception_on_error parameter.
    - src/gdcmFile.[cxx|h], src/gdcmHeader.[cxx|h] changed accordingly,
    - vtk/vtkGdcmReader.cxx changed accordingly,
    - Example/*.cxx and Test/*.cxx changed accordingly.

2004-07-06 Eric Boix <Eric.Boix@creatis.insa-lyon.fr>
  * src/gdcmDicomDir.cxx, gdcmDocEntrySet.cxx: removed inclusion of errno.h
  * src/gdcmDocument.[h|cxx], gdcmFile.[h|cxx], gdcmHeader.[h|cxx]:
    enable_sequences removed from gdcmHeader constructor and dependencies.
  * Example/PrintHeader.cxx: fixed accordingly (enable_sequences removal).
  * gdcmPython/demo/PrintHeader.py: dummy fix.
  * src/gdcmDocument.[h|cxx], gdcmFile.[h|cxx], gdcmHeader.[h|cxx]:
    skip_shadow removed from gdcmHeader constructor and dependencies.
  * Example/*.cxx and Test/*.cxx changed accordingly.

2004-07-27 Eric Boix <Eric.Boix@creatis.insa-lyon.fr>
  * Test/CMakeLists.txt: newly re-introduced SIEMENS_Sonata-12-MONO2-SQ.dcm